--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -68,7 +68,7 @@
   backdrop-filter: blur(8.3px);
   -webkit-backdrop-filter: blur(3.3px);
   border: 1px solid rgba(255, 255, 255, 0.3);
-  color: #1e1e1e;
+  color: #ffffff;
 }
 
 .Weather-App-Content span {
